examples/test/testpolicy13754.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13754
  namespace: namespace141
spec:
  podSelector:
    matchLabels:
      key43: value27
      key21: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value19
          key7: value5
          key18: value39
      podSelector:
        matchLabels:
          key27: value1
